Fix flickering issue and large links on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 .about-link {
   /* padding: 3px 10px 3px 10px; */
   margin: 0 5px 0 5px;
-  line-height: 40px;
+  line-height: 20px;
 }
 
 .button-black {
@@ -69,12 +69,14 @@ div.about {
 }
 
 div.about div.row {
-  top: 48%;
+  top: 10%;
   left: 50%;
   transform: translateY(-50%);
   position: absolute;
   width: 980px;
   margin-left: -490px;
+  transform: translateZ(0);
+  -webkit-transform: translateZ(0);
 }
 
 div.portfolio {
